--- a/task-5/задания 1 уровня/1 поиск элементов на странице/4-поиск_одного_элемента_по_селектору.html
+++ b/task-5/задания 1 уровня/1 поиск элементов на странице/4-поиск_одного_элемента_по_селектору.html
@@ -32,7 +32,7 @@
     aria-valuenow="50" и выведите его в консоль. -->
 
   <script>
-    let selectDiv = document.querySelector('div[aria-valuenow=50]')
+    let selectDiv = document.querySelector('[aria-valuenow="50"]')
     console.log(selectDiv);
   </script>
 </body>
