--- a/task-5/задания 2 уровня/1 получение элементов и свойств/5-проверка_наличия_класса.html
+++ b/task-5/задания 2 уровня/1 получение элементов и свойств/5-проверка_наличия_класса.html
@@ -13,5 +13,11 @@
     2. Затем обратитесь к списку классов и с помощью метода contains()
     проверьте есть ли класс hidden у этого тега.
      -->
+    <script>
+        let div = document.querySelector('div');
+
+        console.log('is hidden', div.classList.contains('hidden'));
+
+    </script>
 </body>
 </html>
