--- a/task-5/задания 2 уровня/2 обработка события/4-изменение_разметки.html
+++ b/task-5/задания 2 уровня/2 обработка события/4-изменение_разметки.html
@@ -26,8 +26,7 @@
         let product = document.querySelector('.product');
 
         product.addEventListener('click', function (event) {
-          event.currentTarget.innerHtml = " <div>Другой товар</div>\n" +
-            "    <div>Другое описание</div>"
+          event.currentTarget.innerHtml = " <div>Другой товар</div><div>Другое описание</div>"
         });
     </script>
 </body>
