--- a/task-5/задания 2 уровня/2 обработка события/5-всплытие_события.html
+++ b/task-5/задания 2 уровня/2 обработка события/5-всплытие_события.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+
     <ul>
         <li>
             <button>Кнопка</button>
@@ -24,7 +24,12 @@
     объект события, передаваемый в функцию-обработчик клика. -->
 
     <script>
-        
+        let ul = document.querySelector('ul');
+
+        ul.addEventListener('click', function (event) {
+          console.log('Клик по элементу:', event.target);
+          console.log('Отловлен на элементе', event.currentTarget);
+        });
     </script>
 </body>
 </html>
