--- a/task-6/задания 1 уровня/2-стили.html
+++ b/task-6/задания 1 уровня/2-стили.html
@@ -17,7 +17,8 @@
     padding. -->
 
     <script>
-        
+        let blocks = document.querySelectorAll('div');
+        blocks.forEach((div) => (div.style.padding = '10px'));
     </script>
 </body>
 </html>
